# rope-refactor-extension

./: .vscodeignore  README.md  main.py  package.json  pyproject.toml  tsconfig.json
.basedpyright/: baseline.json
.ropeproject/: history  history.json
python/: rope_refactor.py
python/tests/: test_rope.py
src/: extension.ts  ropeBridge.ts  util.ts
test/: extension.test.js  extension.test.ts
